--- a/main.css
+++ b/main.css
@@ -1,3 +1,6 @@
 * {
-  font-family= Playfair Display;
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
